fixed styling on tablets

--- a/src/styles.css
+++ b/src/styles.css
@@ -278,7 +278,7 @@ a, a:hover, a:visited{
         text-wrap: nowrap;
         position: absolute;
         top: 90px;
-        right: 30px;
+        right: 55px;
         text-shadow: 1px 1px 3px black;
         height: 0;
         width: 0;
@@ -286,16 +286,16 @@ a, a:hover, a:visited{
     }
 
     .about{
-        width: 700px;
-        height: 450px;
+        width: 65%;
+        height: 56%;
         margin-top: 50px;
         gap: 0;
     }
 
     .about > h2{
         align-self: end;
-        padding-right: 15%;
-        padding-top: 20px;
+        width: 55.5%;
+        text-align:center;
     }
 
     .about{
@@ -310,8 +310,8 @@ a, a:hover, a:visited{
     .about > p::before{
         content: '';
         display: inline-block;
-        width: 312px;
-        height: 259px;
+        width: 45%;
+        height: 81%;
         float: left;
         padding-right: 18px;
     }
@@ -352,6 +352,17 @@ a, a:hover, a:visited{
         padding-left: 25px;
     }
 
+}
+
+@media (min-width: 601px) and (max-width: 850px){
+    .about{
+        height: 69%;
+        margin-top: 122px;
+    }
+
+    .about > p::before{
+        height: 66%;
+    }
 }
 
 @media (max-width: 600px){
